@@ -7,8 +7,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,20 +18,29 @@ public class HouseAPI {
     @Value("${seouldata.tbLnOpendataRentV.key}")
     private String key;
 
-    public RentApiModel fetchAPI(int start, int end) throws IOException {
-        StringBuilder urlBuilder = new StringBuilder("http://openapi.seoul.go.kr:8088");
-        urlBuilder.append('/').append(URLEncoder.encode(key, "UTF-8"))
-                .append('/').append(URLEncoder.encode("json", "UTF-8"))
-                .append('/').append(URLEncoder.encode("tbLnOpendataRentV", "UTF-8"))
-                .append('/').append(URLEncoder.encode(String.valueOf(start), "UTF-8"))
-                .append('/').append(URLEncoder.encode(String.valueOf(end), "UTF-8"));
+    /**
+     * 공공데이터에서 전세집 데이터를 추출한다.
+     * @param start 공공데이터 시작점
+     * @param end   공공데이터 마지막점
+     * @return
+     */
+    public RentApiModel fetchAPI(int start, int end) {
+        String urlBuilder = "http://openapi.seoul.go.kr:8088" + '/' + URLEncoder.encode(key, StandardCharsets.UTF_8) +
+                '/' + URLEncoder.encode("json", StandardCharsets.UTF_8) +
+                '/' + URLEncoder.encode("tbLnOpendataRentV", StandardCharsets.UTF_8) +
+                '/' + URLEncoder.encode(String.valueOf(start), StandardCharsets.UTF_8) +
+                '/' + URLEncoder.encode(String.valueOf(end), StandardCharsets.UTF_8);
 
         RestTemplate restTemplate = new RestTemplate();
-        return restTemplate.getForObject(urlBuilder.toString(), RentApiModel.class);
+        return restTemplate.getForObject(urlBuilder, RentApiModel.class);
     }
-
+    /**
+     * 전세집 중 필요한 데이터만 추출하기 위한 필터링기능
+     * @param rentApiModel  공공데이터 API의 전세집 데이터
+     * @return @link  package.class#member  label
+     */
     public List<RentRow> filteringRentHouse(RentApiModel rentApiModel) {
-        List<RentRow> result = rentApiModel.getTbLnOpendataRentV().getRow().stream()
+        return rentApiModel.getTbLnOpendataRentV().getRow().stream()
                 .filter(row -> row.getRentGbn().equals("전세"))
                 .filter(row -> row.getCntrctPrd().equals(""))
                 .filter(row -> row.getBobn() != null && !row.getBobn().equals(""))
@@ -45,7 +54,5 @@ public class HouseAPI {
                 .filter(row -> row.getRentArea() != null && row.getRentArea() != 0D)
                 .filter(row -> row.getFlrNo() != null && row.getFlrNo() != 0D)
                 .collect(Collectors.toList());
-
-        return result;
     }
 }
